--- a/.gitignore
+++ b/.gitignore
@@ -164,3 +164,5 @@ cython_debug/
 05_Train_Validate_Models/saved_shap_explainer/SHAP_Explainer_BalBag_DT.model
 05_Train_Validate_Models/saved_shap_explainer/SHAP_Explainer_values_BalBag_DT.model
 
+05_Train_Validate_Models/saved_shap_explainer/SHAP_KernelExplainer_BalBag_DT.model
+05_Train_Validate_Models/saved_shap_explainer/SHAP_KernelExplainer_values_BalBag_DT.model
